2010-10-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16065: New layout and labels for tt_content show palette labels without content (Thanks to Jo Hasenau)

2010-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16079: htmlArea RTE: Register RTE scripts with the autoloader
	* Follow-up to feature #16079: htmlArea RTE: Register RTE scripts with the autoloader

2010-10-20  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0alpha3

2010-10-20  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15950: use t3editor in file_edit to edit files in fileadmin
	* Fixed bug #16019: Workspaces - Stage notification emails should be localizable

2010-10-20  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16075: Add IfModule mod_rewrite.c to misc/advanced.htaccess
	* Fixed bug #16077: Palette titles have no margin to the left in the new page / tt_content form layouts
	* Fixed bug #16074: Add new API t3lib_befunc::helpTextArray and use it in the ExtDirect tooltips

2010-10-20  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16049: Loading mask doesn't disappear on hitting Esc/cancel loading

2010-10-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16073: htmlArea RTE: Add paste as plain text feature
	* Follow-up to bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
	* Follow-up to feature #16073: htmlArea RTE: Add paste as plain text feature

2010-10-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16000: Move versioning selector to the version extension

2010-10-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0alpha3

2010-10-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16059: Use ExtJS Tooltips for CSH labels
	* Fixed bug #16071: PHP Fatal error in t3lib_contextmenu_renderer_Abstract (Thanks to Stefano Kowalke)
	* Removal of unused and illegal files inside of codemirror library
	* Fixed bug #16055: BE debug mode should also enable debug mode for libraries
